--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body class="antialiased">
             <header>
                 <div class="navbar">
-                    <div class="logo"><a href="#">Bedigital</a></div>
+                    <div class="logo"><a href="#"><img src="./logo.png" alt="logo"></a></div>
                     <ul class="links">
                         <li><a href="/">Home</a></li>
                         <li><a href="#service">Services</a></li>
