--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+        <link rel="stylesheet" href="./main.css">
         <title>Bedigital</title>
     </head>
     <body class="antialiased">
             <header>
                 <div class="navbar">
-                    <div class="logo"><a href="#"><img src="{{ asset("/images/logo.png") }}" alt="logo"></a></div>
+                    <div class="logo"><a href="#"><img src="logo.png" alt="logo"></a></div>
                     <ul class="links">
                         <li><a href="/">Home</a></li>
                         <li><a href="#service">Services</a></li>
@@ -152,7 +152,7 @@
             </main>
             <footer>
                 <div class="footer-content">
-                    <img src="{{ asset('/images/logo.png') }}" alt="Bedigital Logo">
+                    <img src="logo.png" alt="Bedigital Logo">
                     <p>Our agency BEDIGITAL provides all the expertise you need to improve your digital marketing, ensuring you achieve fruitful results and offer the best experience to your customers.</p>
                     <ul class="socials">
                         <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
@@ -165,6 +165,6 @@
                 </div>
         
             </footer>
-    <script src="{{ asset('js/main.js') }}"></script>
+    <script src="./main.js"></script>
     </body>
 </html>
